--- a/lungcarcinogenic/templates/error.html
+++ b/lungcarcinogenic/templates/error.html
@@ -8,7 +8,7 @@
   <div class=metanav>
     <h3>!!!ERROR!!!<a href='/index'>Back to Home</a></h3>
 	<h4>
-		Please enter a US county in the proper format!
+		Please check your input!
 	</h4>
   </div>
 </div>
